[gd_scene load_steps=6 format=2]

[ext_resource path="res://images/crumble/crumble-1.png" type="Texture" id=1]
[ext_resource path="res://controls/crumbles/crumble.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.5, 16.5 )

[sub_resource type="Animation" id=3]
resource_name = "Crumbling"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 4, 6 ]
}

[node name="Crumble" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.447059, 0.447059, 0.0470588, 1 )
texture = ExtResource( 1 )
hframes = 9

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="StaticBodyCollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )
one_way_collision = true

[node name="AnimationControlArea2D" type="Area2D" parent="StaticBody2D"]

[node name="AnimationControlCollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/AnimationControlArea2D"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Crumbling = SubResource( 3 )
[connection signal="body_entered" from="StaticBody2D/AnimationControlArea2D" to="." method="_on_animation_control_area_body_entered"]
[connection signal="body_exited" from="StaticBody2D/AnimationControlArea2D" to="." method="_on_animation_control_area_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
